--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 17:05:12 2018</p>
+         Last Run: Wed Jul 11 18:05:24 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
-                        <td>34</td>
+                        <td>35</td>
                         <td>4</td>
                         <td>8</td>
                         <td>SSE</td>
@@ -46,7 +46,7 @@
                         <td>25</td>
                         <td>25</td>
                         <td>0</td>
-                        <td>33</td>
+                        <td>34</td>
                         <td>2</td>
                         <td>10</td>
                         <td>S</td>
@@ -62,7 +62,7 @@
                         <td>1</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>15</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -70,11 +70,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>37</td>
+                        <td>38</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>14</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -82,11 +82,11 @@
                         <td>22</td>
                         <td>22</td>
                         <td>1</td>
-                        <td>44</td>
+                        <td>45</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SE</td>
-                        <td>9</td>
+                        <td>12</td>
                      </tr>
                   </tbody>
                </table>
@@ -214,11 +214,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "35",
                  "34",
-                 "33",
                  "34",
-                 "37",
-                 "44"
+                 "38",
+                 "45"
                ]
              },
              {
@@ -228,9 +228,9 @@
                "data":[
                  "18",
                  "15",
-                 "15",
-                 "14",
-                 "9"
+                 "16",
+                 "17",
+                 "12"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 17:05:12 2018</p>
+         Last Run: Wed Jul 11 18:05:24 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -268,34 +268,34 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Chance of Rain</td>
                         <td>11</td>
                         <td>11</td>
-                        <td>24</td>
-                        <td>76</td>
+                        <td>31</td>
+                        <td>78</td>
                         <td>2</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>NNW</td>
-                        <td>70</td>
+                        <td>68</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Mostly Cloudy</td>
                         <td>13</td>
                         <td>13</td>
-                        <td>10</td>
+                        <td>16</td>
                         <td>64</td>
                         <td>4</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>74</td>
+                        <td>73</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>4</td>
+                        <td>2</td>
                         <td>51</td>
                         <td>4</td>
                         <td>14</td>
@@ -311,8 +311,8 @@
                         <td>44</td>
                         <td>4</td>
                         <td>11</td>
-                        <td>NW</td>
-                        <td>82</td>
+                        <td>NNW</td>
+                        <td>80</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -324,7 +324,7 @@
                         <td>5</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>76</td>
+                        <td>77</td>
                      </tr>
                   </tbody>
                </table>
@@ -440,9 +440,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "24",
-                 "10",
-                 "4",
+                 "31",
+                 "16",
+                 "2",
                  "15",
                  "15"
                ]
@@ -452,7 +452,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "76",
+                 "78",
                  "64",
                  "51",
                  "44",
@@ -464,11 +464,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "70",
-                 "74",
+                 "68",
+                 "73",
                  "75",
-                 "82",
-                 "76"
+                 "80",
+                 "77"
                ]
              }
            ]
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 17:05:12 2018</p>
+         Last Run: Wed Jul 11 18:05:24 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -513,20 +513,20 @@
                         <td>53</td>
                         <td>2</td>
                         <td>10</td>
-                        <td>SW</td>
-                        <td>5</td>
+                        <td>SSW</td>
+                        <td>4</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>17</td>
-                        <td>17</td>
+                        <td>18</td>
+                        <td>18</td>
                         <td>0</td>
                         <td>45</td>
                         <td>3</td>
                         <td>11</td>
                         <td>SSW</td>
-                        <td>10</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -550,7 +550,7 @@
                         <td>6</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>24</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -561,7 +561,7 @@
                         <td>32</td>
                         <td>7</td>
                         <td>11</td>
-                        <td>S</td>
+                        <td>SSE</td>
                         <td>18</td>
                      </tr>
                   </tbody>
@@ -609,7 +609,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "15",
-                 "17",
+                 "18",
                  "19",
                  "21",
                  "22"
@@ -622,7 +622,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "15",
-                 "17",
+                 "18",
                  "19",
                  "21",
                  "22"
@@ -702,10 +702,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "5",
-                 "10",
+                 "4",
+                 "9",
                  "19",
-                 "24",
+                 "23",
                  "18"
                ]
              }
@@ -723,7 +723,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 17:05:12 2018</p>
+         Last Run: Wed Jul 11 18:05:24 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -748,11 +748,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>31</td>
+                        <td>30</td>
                         <td>2</td>
                         <td>16</td>
                         <td>ESE</td>
-                        <td>2</td>
+                        <td>3</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -760,23 +760,23 @@
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
-                        <td>34</td>
+                        <td>33</td>
                         <td>1</td>
-                        <td>18</td>
-                        <td>ENE</td>
-                        <td>3</td>
+                        <td>16</td>
+                        <td>E</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>21</td>
-                        <td>21</td>
+                        <td>22</td>
+                        <td>22</td>
                         <td>0</td>
                         <td>39</td>
                         <td>0</td>
-                        <td>18</td>
+                        <td>16</td>
                         <td>E</td>
-                        <td>3</td>
+                        <td>13</td>
                      </tr>
                   </tbody>
                </table>
@@ -822,7 +822,7 @@
                "data":[
                  "24",
                  "23",
-                 "21"
+                 "22"
                ]
              },
              {
@@ -833,7 +833,7 @@
                "data":[
                  "24",
                  "23",
-                 "21"
+                 "22"
                ]
              }
            ]
@@ -894,8 +894,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "31",
-                 "34",
+                 "30",
+                 "33",
                  "39"
                ]
              },
@@ -904,9 +904,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "2",
                  "3",
-                 "3"
+                 "7",
+                 "13"
                ]
              }
            ]
@@ -923,7 +923,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 17:05:12 2018</p>
+         Last Run: Wed Jul 11 18:05:24 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
