--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 18:05:24 2018</p>
+         Last Run: Wed Jul 11 19:05:22 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -38,7 +38,7 @@
                         <td>4</td>
                         <td>8</td>
                         <td>SSE</td>
-                        <td>18</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
@@ -60,9 +60,9 @@
                         <td>0</td>
                         <td>34</td>
                         <td>1</td>
-                        <td>10</td>
-                        <td>SSE</td>
-                        <td>16</td>
+                        <td>11</td>
+                        <td>SE</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -72,9 +72,9 @@
                         <td>0</td>
                         <td>38</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>SSE</td>
-                        <td>17</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -86,7 +86,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SE</td>
-                        <td>12</td>
+                        <td>13</td>
                      </tr>
                   </tbody>
                </table>
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "18",
+                 "11",
                  "15",
-                 "16",
-                 "17",
-                 "12"
+                 "24",
+                 "24",
+                 "13"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 18:05:24 2018</p>
+         Last Run: Wed Jul 11 19:05:22 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -275,7 +275,7 @@
                         <td>78</td>
                         <td>2</td>
                         <td>16</td>
-                        <td>NNW</td>
+                        <td>NW</td>
                         <td>68</td>
                      </tr>
                      <tr>
@@ -304,7 +304,7 @@
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>17</td>
                         <td>17</td>
                         <td>15</td>
@@ -312,7 +312,7 @@
                         <td>4</td>
                         <td>11</td>
                         <td>NNW</td>
-                        <td>80</td>
+                        <td>78</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -321,10 +321,10 @@
                         <td>19</td>
                         <td>15</td>
                         <td>39</td>
-                        <td>5</td>
+                        <td>6</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>77</td>
+                        <td>75</td>
                      </tr>
                   </tbody>
                </table>
@@ -467,8 +467,8 @@
                  "68",
                  "73",
                  "75",
-                 "80",
-                 "77"
+                 "78",
+                 "75"
                ]
              }
            ]
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 18:05:24 2018</p>
+         Last Run: Wed Jul 11 19:05:22 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -510,23 +510,23 @@
                         <td>15</td>
                         <td>15</td>
                         <td>0</td>
-                        <td>53</td>
+                        <td>54</td>
                         <td>2</td>
                         <td>10</td>
                         <td>SSW</td>
-                        <td>4</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>18</td>
-                        <td>18</td>
+                        <td>17</td>
+                        <td>17</td>
                         <td>0</td>
-                        <td>45</td>
+                        <td>47</td>
                         <td>3</td>
                         <td>11</td>
                         <td>SSW</td>
-                        <td>9</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -536,9 +536,9 @@
                         <td>0</td>
                         <td>41</td>
                         <td>4</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>S</td>
-                        <td>19</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -546,11 +546,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>35</td>
+                        <td>36</td>
                         <td>6</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>S</td>
-                        <td>23</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -609,7 +609,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "15",
-                 "18",
+                 "17",
                  "19",
                  "21",
                  "22"
@@ -622,7 +622,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "15",
-                 "18",
+                 "17",
                  "19",
                  "21",
                  "22"
@@ -690,10 +690,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "53",
-                 "45",
+                 "54",
+                 "47",
                  "41",
-                 "35",
+                 "36",
                  "32"
                ]
              },
@@ -702,10 +702,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "4",
-                 "9",
-                 "19",
-                 "23",
+                 "5",
+                 "10",
+                 "20",
+                 "24",
                  "18"
                ]
              }
@@ -723,7 +723,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 18:05:24 2018</p>
+         Last Run: Wed Jul 11 19:05:22 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -752,7 +752,7 @@
                         <td>2</td>
                         <td>16</td>
                         <td>ESE</td>
-                        <td>3</td>
+                        <td>4</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -762,7 +762,7 @@
                         <td>0</td>
                         <td>33</td>
                         <td>1</td>
-                        <td>16</td>
+                        <td>18</td>
                         <td>E</td>
                         <td>7</td>
                      </tr>
@@ -774,9 +774,9 @@
                         <td>0</td>
                         <td>39</td>
                         <td>0</td>
-                        <td>16</td>
-                        <td>E</td>
-                        <td>13</td>
+                        <td>18</td>
+                        <td>ESE</td>
+                        <td>12</td>
                      </tr>
                   </tbody>
                </table>
@@ -904,9 +904,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "3",
+                 "4",
                  "7",
-                 "13"
+                 "12"
                ]
              }
            ]
@@ -923,7 +923,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 18:05:24 2018</p>
+         Last Run: Wed Jul 11 19:05:22 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -945,38 +945,38 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>26</td>
-                        <td>26</td>
-                        <td>0</td>
-                        <td>32</td>
+                        <td>25</td>
+                        <td>25</td>
+                        <td>14</td>
+                        <td>35</td>
                         <td>1</td>
                         <td>18</td>
-                        <td>SE</td>
-                        <td>3</td>
+                        <td>ESE</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>1</td>
-                        <td>37</td>
+                        <td>11</td>
+                        <td>40</td>
                         <td>0</td>
                         <td>16</td>
                         <td>ESE</td>
-                        <td>4</td>
+                        <td>26</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Clear</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>24</td>
-                        <td>45</td>
+                        <td>Partly Cloudy</td>
+                        <td>21</td>
+                        <td>21</td>
+                        <td>8</td>
+                        <td>47</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>ESE</td>
-                        <td>4</td>
+                        <td>30</td>
                      </tr>
                   </tbody>
                </table>
@@ -1020,9 +1020,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "26",
+                 "25",
                  "24",
-                 "22"
+                 "21"
                ]
              },
              {
@@ -1031,9 +1031,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "26",
+                 "25",
                  "24",
-                 "22"
+                 "21"
                ]
              }
            ]
@@ -1084,9 +1084,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "0",
-                 "1",
-                 "24"
+                 "14",
+                 "11",
+                 "8"
                ]
              },
              {
@@ -1094,9 +1094,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "32",
-                 "37",
-                 "45"
+                 "35",
+                 "40",
+                 "47"
                ]
              },
              {
@@ -1104,9 +1104,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "3",
-                 "4",
-                 "4"
+                 "15",
+                 "26",
+                 "30"
                ]
              }
            ]
