--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 19:05:22 2018</p>
+         Last Run: Wed Jul 11 20:05:25 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 19:05:22 2018</p>
+         Last Run: Wed Jul 11 20:05:25 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 19:05:22 2018</p>
+         Last Run: Wed Jul 11 20:05:25 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -510,11 +510,11 @@
                         <td>15</td>
                         <td>15</td>
                         <td>0</td>
-                        <td>54</td>
+                        <td>55</td>
                         <td>2</td>
                         <td>10</td>
                         <td>SSW</td>
-                        <td>5</td>
+                        <td>4</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
@@ -522,11 +522,11 @@
                         <td>17</td>
                         <td>17</td>
                         <td>0</td>
-                        <td>47</td>
+                        <td>48</td>
                         <td>3</td>
                         <td>11</td>
-                        <td>SSW</td>
-                        <td>10</td>
+                        <td>S</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -534,11 +534,11 @@
                         <td>19</td>
                         <td>19</td>
                         <td>0</td>
-                        <td>41</td>
+                        <td>42</td>
                         <td>4</td>
                         <td>11</td>
                         <td>S</td>
-                        <td>20</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -546,11 +546,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>36</td>
+                        <td>37</td>
                         <td>6</td>
                         <td>11</td>
-                        <td>S</td>
-                        <td>24</td>
+                        <td>SSE</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -558,7 +558,7 @@
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
-                        <td>32</td>
+                        <td>33</td>
                         <td>7</td>
                         <td>11</td>
                         <td>SSE</td>
@@ -690,11 +690,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
-                 "47",
-                 "41",
-                 "36",
-                 "32"
+                 "55",
+                 "48",
+                 "42",
+                 "37",
+                 "33"
                ]
              },
              {
@@ -702,10 +702,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "5",
-                 "10",
-                 "20",
-                 "24",
+                 "4",
+                 "9",
+                 "19",
+                 "23",
                  "18"
                ]
              }
@@ -723,7 +723,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 19:05:22 2018</p>
+         Last Run: Wed Jul 11 20:05:25 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -774,9 +774,9 @@
                         <td>0</td>
                         <td>39</td>
                         <td>0</td>
-                        <td>18</td>
+                        <td>16</td>
                         <td>ESE</td>
-                        <td>12</td>
+                        <td>13</td>
                      </tr>
                   </tbody>
                </table>
@@ -906,7 +906,7 @@
                "data":[
                  "4",
                  "7",
-                 "12"
+                 "13"
                ]
              }
            ]
@@ -923,7 +923,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 19:05:22 2018</p>
+         Last Run: Wed Jul 11 20:05:25 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -947,34 +947,34 @@
                         <td>Clear</td>
                         <td>25</td>
                         <td>25</td>
-                        <td>14</td>
+                        <td>19</td>
                         <td>35</td>
                         <td>1</td>
                         <td>18</td>
                         <td>ESE</td>
-                        <td>15</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>11</td>
+                        <td>14</td>
                         <td>40</td>
                         <td>0</td>
                         <td>16</td>
                         <td>ESE</td>
-                        <td>26</td>
+                        <td>25</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>8</td>
-                        <td>47</td>
+                        <td>19</td>
+                        <td>48</td>
                         <td>0</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>ESE</td>
                         <td>30</td>
                      </tr>
@@ -1084,9 +1084,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "19",
                  "14",
-                 "11",
-                 "8"
+                 "19"
                ]
              },
              {
@@ -1096,7 +1096,7 @@
                "data":[
                  "35",
                  "40",
-                 "47"
+                 "48"
                ]
              },
              {
@@ -1104,8 +1104,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "15",
-                 "26",
+                 "14",
+                 "25",
                  "30"
                ]
              }
